--- a/config/iris.properties
+++ b/config/iris.properties
@@ -1,9 +1,9 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sun Oct 05 19:59:23 CST 2025
+#Mon Oct 06 13:53:02 CST 2025
 allowUnknownShaders=false
-colorSpace=SRGB
+colorSpace=DISPLAY_P3
 disableUpdateMessage=false
 enableDebugOptions=false
-enableShaders=true
+enableShaders=false
 maxShadowRenderDistance=32
-shaderPack=
+shaderPack=photon_v1.2a.zip
